# FastAPIProjectBuilder

./: .replit  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  replit.md  test_database.db
app/: __init__.py  main.py
app/api/: auth.py  dependencies.py  telegram.py
app/api/endpoints/: bots.py  users.py
app/core/: config.py  db.py
app/migrations/: env.py
app/migrations/versions/: 027e976b566e_create_client_and_bot_tables_v2.py  0fa15635321e_create_client_and_bot_tables_v3.py  a7912565dc25_create_client_and_bot_tables.py
app/models/: bot.py  client.py  user.py
app/schemas/: base.py  client.py  user.py
app/services/: ai_service.py  user_service.py
attached_assets/: Pasted-A-lo-darajada-Ikkinchi-bosqich-ham-to-liq-va-xatosiz-bajarildi-Siz-taqdim-etgan-fayl-tarkiblari-va-1756660896104_1756660896105.txt  Pasted-Barakalla-Endi-men-ham-to-liq-amin-bo-ldim-Hisobot-uchun-rahmat-Xavfsizlik-qismi-mukammal-qurilga-1756662489366_1756662489367.txt  Pasted-FRONTEND-SERVERINI-TUZATISH-UCHUN-QAT-IY-PROMPT-Siz-uchun-Yo-riqnoma-Quyidagi-topshiriq-AI-ga-avva-1756667367475_1756667367476.txt  Pasted-Fantastika-Bu-loyihamizdagi-eng-muhim-bosqichlardan-biri-edi-va-biz-uni-xatosiz-to-liq-muvaffaqi-1756661239777_1756661239778.txt  Pasted-Inqilobiy-Biz-buni-uddaladik-Loyihamizning-yuragi-va-miyasi-endi-birgalikda-ishlayapti-Siz-taqdi-1756663113005_1756663113006.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Botlar-ro-yxati-sahifasi-funksional-jihatdan-tayyor-Endi-unga-oxirgi-muhim-f-1756669407953_1756669407954.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Dashboard-qolipi-tayyor-ajoyib-Endi-uning-asosiy-qismini-foydalanuvchinin-1756668820929_1756668820930.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Dizayn-tizimi-butunlay-noto-g-ri-sozlangan-Biz-uni-to-liq-qayta-o-rnatamiz--1756670294902_1756670294902.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Login-sahifasi-tayyor-ajoyib-Endi-tizimga-kirgan-foydalanuvchilar-uchun-aso-1756668582408_1756668582408.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Monorepo-muvaffaqiyatli-qurildi-rahmat-Endi-foydalanuvchilar-tizimga-kirish-1756666042730_1756666042730.txt  Pasted-REPLIT-AI-UCHUN-YAKUNIY-PROMPT-Bizning-frontend-loyihamizdagi-konfiguratsiya-muammolari-tiqilib-qold-1756671269305_1756671269305.txt  Pasted-Tajribali-Loyiha-Menejeri-Gem-Bu-juda-o-rinli-va-professional--1756665503863_1756665503864.txt
backend/: alembic.ini  main.py  pyproject.toml  replit.md
backend/app/api/: health.py  routes.py
backend/app/api/endpoints/: clients.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/schemas/: __init__.py  bot.py
backend/app/services/: ai_service.py  user_service.py
backend/attached_assets/: Pasted-2-BOSQICH-MA-LUMOTLAR-BAZASINI-SOZLASH-Replit-Versiyasi-Loyiha-Mazmuni-Biz-ilovamizni-PostgreSQL-1756660458269_1756660458269.txt  Pasted-A-lo-Kodni-tekshirdim-u-benuqson-Xavfsizlik-ma-lumotlar-bilan-ishlash-va-API-mantig-i-to-g-ri-b-1756662724164_1756662724165.txt  Pasted-REPLIT-AI-UCHUN-PROMPT-Iltimos-birinchi-test-foydalanuvchisini-yaratish-uchun-create-client-py-nom-1756664030377_1756664030378.txt  Pasted-Zo-r-ish-To-rtinchi-bosqich-ham-muvaffaqiyatli-yakunlandi-AI-hisoboti-va-schemalarning-tuzilishi--1756661918088_1756661918089.txt
frontend/: postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateBotDialog.tsx  ProtectedRoute.tsx
frontend/src/components/layout/: DashboardLayout.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx
